# edutrackv2

./: package-lock.json  package.json
src/: Studentlist.html  about.html  abouts.html  analytics copy.html  analytics.css  analytics.html  analytics.js  auth.js  classschedule.html  dash.html  forgotpass.css  forgotpass.html  forgotpass.js  grades_performance.html  grades_summary.html  greeting.js  index.html  login.css  login.html  login.js  logout.html  logout2.css  logout2.html  main.js  marking copy.html  marking.css  marking.html  marking.js  profile.html  profiles.css  profiles.html  signup.css  signup.html  signup.js  styles.css
src-tauri/: Cargo.toml  my_database.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
