[package]
name = "edutrack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "edutrack"
path = "src/main.rs"

[lib]
name = "edutrack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
bcrypt = "0.15" 
time = "0.3"
jsonwebtoken = "8.0"
chrono = "0.4"
rand = "0.8"
actix-web = "4.0"
actix-files = "0.6"
tokio = { version = "1.32", features = ["full"] }

